# jview

./: .gitignore  Makefile  pyproject.toml
src/jview/: __init__.py  __main__.py
tests/: __init__.py  test_dummy.py
