[project]
name = "jview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["rich>=13.9.4"]

[dependency-groups]
dev = ["black>=24.10.0", "mypy>=1.13.0", "pytest>=8.3.3", "ruff>=0.8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.scripts]
jview = "jview.__main__:main"

# ==============================================================================
# Linting, formatting and type checking
# ==============================================================================
[tool.ruff]
lint.select = ["ALL"]
lint.ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "INP001"]


[tool.mypy]
files = "."
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
